# exam-assignment

./: docker-compose.yaml
auth_service/: Dockerfile.dev  package-lock.json  package.json
auth_service/src/: server.js
auth_service/src/controllers/: auth.js
auth_service/src/db/: usersService.js
auth_service/src/middlewares/: error.js  inputValidations.js
auth_service/src/models/: auth.js  errors.js
auth_service/src/routes/: auth.js
data/: dev.sql
frontend_desktop/: package-lock.json  package.json  tsconfig.json
frontend_desktop/src/: App.svelte  main.ts  types.ts
frontend_desktop/src-tauri/: Cargo.toml  tauri.conf.json
nginx/: api_gateway.conf
orders_service/: .gitignore  .prettierrc  database.json  package-lock.json  package.json  start.sh  tsconfig.json
orders_service/migrations/: 20220423223835-create-orders-table.js  20220425195649-create-order-articles-table.js  20220425201728-create-order-rows-table.js
orders_service/src/: server.ts  types.ts
users_service/: .gitignore  Cargo.toml  Dockerfile.dev  Rocket.toml  start.sh
users_service/migrations/: U01__create_users_table.sql  U02__create_employee_positions_table.sql
users_service/src/: main.rs
users_service/src/controllers/: catchers.rs  users.rs
users_service/src/db/: users_service.rs
users_service/src/helpers/: error_handler.rs  mod.rs  password_handler.rs
users_service/src/models/: json_api.rs  mod.rs  users.rs
users_service/src/models/dtos/: create_user.rs  update_user.rs
users_service/src/queries/: users.rs
users_service/src/repositories/: users.rs
(+84 files in other folders)
